# RiichiEnv

./: .gitignore  .pre-commit-config.yaml  BENCHMARK.md  CONTRIBUTING.md  Cargo.toml  DATA_REPRESENTATION.md  README.md  pyproject.toml
docs/: ENCODING.md  (+2 more)
riichienv/: .gitignore  Cargo.toml  README.md  pyproject.toml
riichienv/data/: yans.yml
riichienv/scripts/: debug.py  test_rust_agari.py  verify_games.py  verify_gym_api.py  verify_gym_api_with_mjsoul.py  verify_import.py  verify_yakus.py  verify_yakus_rust.py
riichienv/scripts/bench/: bench_agari_mahjong.py
riichienv/src/: agari.rs  agari_calculator.rs  env.rs  lib.rs  parser.rs  replay.rs  score.rs  tests.rs  types.rs  yaku.rs
riichienv/src/riichienv/: __init__.py  _riichienv.pyi  action.py  convert.py  env.py  game_mode.py  hand.py  log.py  meld.py
riichienv/src/riichienv/agents/: random_agent.py
riichienv/src/riichienv/visualizer/: __init__.py  viewer.py
riichienv/tests/: test_agari_calculator.py  test_calculate_score.py  test_chankan.py  test_claim_priority.py  test_convert.py  test_core.py  test_env.py  test_env_scoring.py  test_game_modes.py  test_kakan.py  test_kyushu_kyuhai.py  test_metadata_injection.py  test_mjai_parity.py  test_paishan.py  test_riichi_autoplay.py  test_verifier_daiminkan.py
riichienv/tests/env/: helper.py  test_furiten_rules.py  test_m263_ron_mismatch.py  test_riichienv.py  test_riichienv_hora.py  test_round_wind.py  test_temporary_furiten.py  test_valid_ankan.py
riichienv/tests/env/actions/: test_kakan.py  test_meld_aka.py
riichienv/tests/env/agari/: test_chankan.py
(+107 files in other folders)
