[package]
name = "riichienv"
version = "0.1.0"
edition = "2021"

[lib]
name = "_riichienv"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
